# obmenu-pp

./: CMakeLists.txt  README.MD  config.h  inih.cpp  main.cpp
common/: shutdown  shutdown.xml
src/: config.h  custom-generator.cpp  inih.h  main.cpp  obmenugenerator.cpp  obmenugenerator.h  steam-pipe.cpp
